Fixed committee member images on mobile

--- a/assets/styles/committeeTransitions.scss
+++ b/assets/styles/committeeTransitions.scss
@@ -6,6 +6,10 @@
 @media (max-width: 500px) {
   .committee-container {
     flex-direction: column;
+
+
+    align-items: center;
+
   }
 }
 
